--- a/SDET_24githubPractice/pom.xml
+++ b/SDET_24githubPractice/pom.xml
@@ -34,5 +34,25 @@
 </pluginManagement>
 </build>
 </profile>
+
+<profile>
+	<id>regression</id>
+	<build>
+<pluginManagement>
+<plugins>
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng_regression.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+</plugins>
+</pluginManagement>
+</build>
+	</profile>
 </profiles>
 </project>
